--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "izitoast": "^1.4.0",
+        "laravel-vue-pagination": "^2.3.0",
         "vue-axios": "^2.1.4",
         "vue-router": "^3.0.2",
         "vuex": "^3.1.0"
